feat: adiciona exposure program
